* Update jettyserver scripts for development & production